ultimo commit 02-04: BuscadorDeClientesVENTAS
Se logró lo siguiente:
1) Crear una lista de clientes (cada item_cliente se creó de forma manual), con el SearchView es posible filtrar la busqueda a partir del "Nombre" (debo arreglar y cambiar que se busque mejor por apellido).

2) al hacer click sobre un cliente se abrirá un cuadro de dialogo con algunos datos del cliente y 3 botones: 

3) estos 3 botones son: Realizar ventas: del cual pasamos todos los datos del cliente (hasta su foto)

el 2do botón es edita o ver datos personales del cliente: también podemos pasar todos los datos personales del cliente. Falta guardar los cambios de edición.

por último el 3er botón que es eliminar un cliente, ese falta hacerlo.

--- a/app/src/main/res/drawable/ventas_supervisor_gradient.xml
+++ b/app/src/main/res/drawable/ventas_supervisor_gradient.xml
@@ -5,9 +5,9 @@
 
 
     <gradient
-        android:startColor="#0d47a1"
-        android:centerColor="#03a9f4"
-        android:endColor="#81d4fa"
+        android:startColor="#ff6d00"
+        android:centerColor="#ffa726"
+        android:endColor="#ff5722"
         android:angle="270" />
 
 
