--- a/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
+++ b/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
@@ -14,7 +14,7 @@
 
     <androidx.appcompat.widget.Toolbar
 
-        android:id="@+id/toolbar_ventas_supervisor"
+        android:id="@+id/toolbar_ventas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#d50000"
@@ -29,7 +29,7 @@
 
         <LinearLayout
 
-            android:id="@+id/parent_llv_activity_ventas_supervisor"
+            android:id="@+id/parent_llv_activity_ventas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -43,10 +43,10 @@
 
                 android:id="@+id/llv_datos_personales"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:layout_weight="1"
-                android:background="#ff5722"
+                android:background="@drawable/ventas_supervisor_gradient"
                 android:orientation="vertical"
                 android:weightSum="5">
 
@@ -63,28 +63,51 @@
 
                     <ImageView
 
-                        android:id="@+id/img_cliente_supervisor"
+                        android:id="@+id/img_cliente"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:src="@mipmap/img_cliente_realizar_venta_repartidor" />
+                        android:layout_marginTop="10dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:id="@+id/llh_dni_ventas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/dni_cliente_realizar_ventas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="DNI"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
 
                 <LinearLayout
 
-                    android:id="@+id/llh_apellido_ventas_supervisor"
+                    android:id="@+id/llh_apellido_ventas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
 
                     <TextView
 
-                        android:id="@+id/nombre_apellido_cliente_realizar_ventas_supervisor"
+                        android:id="@+id/apellido_cliente_realizar_ventas"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:text="APELLIDO"
                         android:textAlignment="center"
                         android:textColor="#FFFF"
@@ -99,6 +122,7 @@
                     android:id="@+id/llh_nombre_ventas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
@@ -117,19 +141,64 @@
 
                 </LinearLayout>
 
+
                 <LinearLayout
 
-                    android:id="@+id/llh_direccion_ventas_supervisor"
+                    android:id="@+id/llh_telefono_ventas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+
+                    <TextView
+
+                        android:id="@+id/codigo_cliente_realizar_ventas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="100dp"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="CÓDIGO DE ÁREA"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:id="@+id/telefono_cliente_realizar_ventas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="70dp"
+                        android:layout_weight="1"
+                        android:gravity="left"
+                        android:text="TELÉFONO"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+
+                    android:id="@+id/llh_direccion_ventas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
 
                     <TextView
-                        android:id="@+id/direccion_cliente_realizar_ventas_supervisor"
+                        android:id="@+id/direccion_cliente_realizar_ventas"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:text="DIRECCIÓN"
                         android:textAlignment="center"
                         android:textColor="#FFFF"
@@ -141,23 +210,71 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_barrio_ventas_supervisor"
+                    android:id="@+id/llh_barrio_ventas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
 
                     <TextView
-                        android:id="@+id/barrio_cliente_realizar_ventas_supervisor"
+                        android:id="@+id/barrio_cliente_realizar_ventas"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:text="BARRIO"
                         android:textAlignment="center"
                         android:textColor="#FFFF"
                         android:textSize="25sp"
                         android:textStyle="bold" />
 
+
+                </LinearLayout>
+
+
+                <LinearLayout
+
+                    android:id="@+id/llh_referencia_ventas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/referencia_cliente_realizar_ventas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="REFERENCIA"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+
+                    android:id="@+id/llh_correo_ventas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/correo_cliente_realizar_ventas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="CORREO"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -176,7 +293,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/layout_vertical_ventas_supervisor"
+                    android:id="@+id/layout_vertical_ventas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -185,7 +302,7 @@
 
 
                     <LinearLayout
-                        android:id="@+id/layout_horizontal_ventas_supervisor"
+                        android:id="@+id/layout_horizontal_ventas"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#FFFF"
@@ -195,7 +312,7 @@
 
                         <ImageButton
 
-                            android:id="@+id/add_art_ventas_supervisor"
+                            android:id="@+id/add_art_ventas"
                             android:layout_width="40dp"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
@@ -214,7 +331,7 @@
 
                             <Spinner
 
-                                android:id="@+id/sp_art_ventas_supervisor"
+                                android:id="@+id/sp_art_ventas"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
@@ -230,7 +347,7 @@
 
                         <EditText
 
-                            android:id="@+id/edtx_cantidad_productos_ventas_supervisor"
+                            android:id="@+id/edtx_cantidad_productos_ventas"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -252,7 +369,7 @@
 
             <LinearLayout
 
-                android:id="@+id/llv_importe_entrega_venta_supervisor"
+                android:id="@+id/llv_importe_entrega_venta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -263,7 +380,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_importe_entrega_ventas_supervisor"
+                    android:id="@+id/llh_importe_entrega_ventas"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
@@ -271,7 +388,7 @@
 
 
                     <TextView
-                        android:id="@+id/importe_ventas_supervisor"
+                        android:id="@+id/importe_ventas"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -285,7 +402,7 @@
 
                     <ImageButton
 
-                        android:id="@+id/img_button_confirmar_ventas_supervisor"
+                        android:id="@+id/img_button_confirmar_ventas"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -295,7 +412,7 @@
 
 
                     <TextView
-                        android:id="@+id/entrega_ventas_supervisor"
+                        android:id="@+id/entrega_ventas"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -318,7 +435,7 @@
 
             <LinearLayout
 
-                android:id="@+id/llv_numero_importe_venta_supervisor"
+                android:id="@+id/llv_numero_importe_venta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -328,7 +445,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_numero_importe_entrega_supervisor"
+                    android:id="@+id/llh_numero_importe_entrega"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#FFFF"
@@ -337,7 +454,7 @@
 
 
                     <TextView
-                        android:id="@+id/cantidad_saldo_productos_ventas_supervisor"
+                        android:id="@+id/cantidad_saldo_productos_ventas"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -350,7 +467,7 @@
 
 
                     <EditText
-                        android:id="@+id/cantidad_entrega_productos_ventas_supervisor"
+                        android:id="@+id/cantidad_entrega_productos_ventas"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginStart="50dp"
