--- a/app/src/main/res/layout/item_clientes.xml
+++ b/app/src/main/res/layout/item_clientes.xml
@@ -4,64 +4,83 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_cliente"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:src="@mipmap/ic_launcher_round" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/img_cliente"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_launcher_round" />
 
 
-        <TextView
-            android:id="@+id/apellido_cliente"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Apellido del Cliente"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_marginLeft="16dp"
+            android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/nombre_cliente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nombre del Cliente"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/apellido_cliente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Apellido del Cliente"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
 
-        <TextView
-            android:id="@+id/direccion_cliente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Direccion" />
+            <TextView
+                android:id="@+id/nombre_cliente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre del Cliente"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/barrio_cliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Barrio" />
+
+            <TextView
+                android:id="@+id/direccion_cliente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Direccion"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/barrio_cliente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Barrio"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
 
 
-    <LinearLayout
+    <View
 
+        android:id="@+id/view_separador_cliente_dos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="end">
+        android:layout_height="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="0dp"
+        android:background="#e0e0e0">
+
+    </View>
 
 
-    </LinearLayout>
 
 
 </LinearLayout>
