--- a/app/src/main/res/drawable/editar_cliente_btn_guardar_cambios_supervisor.xml
+++ b/app/src/main/res/drawable/editar_cliente_btn_guardar_cambios_supervisor.xml
@@ -2,15 +2,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
 
+    <solid android:color="#e65100"/>
 
-    <stroke android:width="3dp"/>
+    <stroke android:width="3dp"
+        android:color="#ffff"/>
 
     <padding android:left="1dp"
-        android:top="10dp"
+        android:top="1dp"
         android:right="1dp"
-        android:bottom="19dp"/>
+        android:bottom="1dp"/>
 
-    <corners android:radius="10px"/>
+    <corners android:radius="30px"></corners>
 
 
 </shape>
