--- a/app/src/main/res/layout/activity_nuevo_evento_patrocinio.xml
+++ b/app/src/main/res/layout/activity_nuevo_evento_patrocinio.xml
@@ -25,6 +25,7 @@
             android:orientation="vertical"
             android:weightSum="2">
 
+        <!-- ###################################################################### -->
 
             <LinearLayout
 
@@ -54,7 +55,7 @@
                         android:id="@+id/img_responsable_nuevo_evento_patrocinio"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:src="@mipmap/img_hombre_uno" />
+                        android:src="@mipmap/cliente_img1_hombrebarbudo_512px" />
 
                 </LinearLayout>
 
